cabal-version:      3.0
name:               redis-glob
version:            0.1.0.0
synopsis:           Specify valid redis globs
description:
  Supplies functions that parse and use redis glob patterns
  I.e, glob-matching works as it does in redis commands like
  [KEYS](https://redis.io/commands/keys/)

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/redis-glob#readme
bug-reports:
  https://github.com/adetokunbo/redis-glob/issues

build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md
tested-with:
  GHC == 8.10.7

source-repository head
  type:     git
  location: https://github.com/adetokunbo/redis-glob.git

library
  exposed-modules:  Redis.Glob.Internal
                    Redis.Glob
  hs-source-dirs:   src
  build-depends:
      base                 >= 4.11 && <5.0
    , ascii-char           >= 1.0 && <1.1
    , ascii-superset       >= 1.0 && <1.1
    , bytestring           >= 0.10 && <0.13
    , megaparsec           >= 9.2.1 && < 9.4

  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -fwarn-tabs
  if impl (ghc >= 8.4)
    ghc-options: -Wpartial-fields


test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Redis.GlobSpec
  hs-source-dirs:   test
  build-depends:    base
                  , QuickCheck
                  , redis-glob
                  , hspec                   >= 2.1
                  , bytestring
                  , ascii-char
                  , ascii-superset
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs


Flag use-doc-tests
  description: Run the doctests
  default:     False

test-suite doctests
  if flag(use-doc-tests)
     buildable:     True
  else
     buildable:     False
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest   >=0.8
    , redis-glob

  hs-source-dirs:   doctest
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
